[package]
name = "numtimes"
version = "0.1.1"
edition = "2024"
authors = ["Terminnus <terminnus95@gmail.com>"]
license = "GPL-3.0-or-later"
description = "A command line tool that prints out the multiplication table of a number"
readme = "README.md"
homepage = "https://github.com/Terminnus95/numtimes"
repository = "https://github.com/Terminnus95/numtimes"
keywords = ["cli", "math"]
categories = ["command-line-utilities"]

[dependencies]
clap = { version = "4.5.40", features = ["derive"] }
